--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   app:
     image: jpgouigoux/sample-app-1:1.0
+    build: ./node-app
     ports:
-      - "8080:80"
+      - "80:80"
   db:
     image: mongo:3.2
